--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -170,13 +170,13 @@ h6 {
 }
 
 .scrolled .header {
-  box-shadow: 0px 0 18px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0 18px rgba(0, 0, 0, 0.33);
 }
 
 /* Global Header on Scroll
 ------------------------------*/
 .scrolled .header {
-  --background-color: rgba(82, 78, 68, 0.8);
+  --background-color: #272f48;
 }
 
 /*--------------------------------------------------------------
